Avoid clipping lists in mobile view #54

--- a/projects/net.splitcells.website.content.default/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.content.default/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -220,7 +220,8 @@ mjx-container {
 }
 ul {
     font-family: var(--text-flowing-font);
-    padding-left: 0;
+    /* A padding to the left, avoids the clipping of the list-style-type with the screen's left border in mobile view. */
+    padding-left: .25em;
     margin-left: 1em;
     padding-bottom: .2em;
     }
